fix heading spacing

--- a/application/static/css/responses_style.css
+++ b/application/static/css/responses_style.css
@@ -122,6 +122,15 @@
    scroll-margin-top: 2rem;
 }
 
+.user-choices h3 {
+   margin-bottom: 0.5rem;
+}
+
+.user-choices h4 {
+   margin-top: 0.5rem;
+   margin-bottom: 1rem;
+}
+
 .survey-choices {
    border-bottom: 1px solid var(--color-border);
    padding: var(--spacing-lg);
